--- a/app/src/main/res/layout/activity_recipe_client.xml
+++ b/app/src/main/res/layout/activity_recipe_client.xml
@@ -23,7 +23,7 @@
         android:id="@+id/recipe_profile_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/chef_profile"
+        android:text="@string/action_show_chef"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -32,7 +32,7 @@
         android:id="@+id/recipe_course_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe_course_label"
+        android:text="@string/form_course"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
@@ -43,7 +43,7 @@
         android:id="@+id/recipe_categories_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe_categories_label"
+        android:text="@string/form_categories"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/recipe_course_label"
         app:layout_constraintTop_toBottomOf="@id/recipe_course_label" />
@@ -52,7 +52,7 @@
         android:id="@+id/recipe_ingredients_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe_ingredients_label"
+        android:text="@string/form_ingredients"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/recipe_course_label"
         app:layout_constraintTop_toBottomOf="@id/recipe_categories_label" />
@@ -62,7 +62,7 @@
         android:id="@+id/recipe_allergens_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe_allergens_label"
+        android:text="@string/form_allergens"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/recipe_course_label"
         app:layout_constraintTop_toBottomOf="@id/recipe_ingredients_label" />
@@ -72,7 +72,7 @@
         android:id="@+id/recipe_price_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe_price_label"
+        android:text="@string/form_price"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/recipe_course_label"
         app:layout_constraintTop_toBottomOf="@id/recipe_allergens_label" />
@@ -123,7 +123,7 @@
 
     <Button
         android:id="@+id/recipe_close"
-        android:text="@string/close"
+        android:text="@string/action_close"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -136,7 +136,7 @@
 
     <Button
         android:id="@+id/recipe_order"
-        android:text="@string/order"
+        android:text="@string/action_order"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
