--- a/app/src/main/res/layout/activity_sign_in_with_email.xml
+++ b/app/src/main/res/layout/activity_sign_in_with_email.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/sign_in_header" />
+        android:text="@string/sign_in_title" />
 
     <TextView
         android:id="@+id/sign_in_with_email_email"
@@ -29,7 +29,7 @@
 
     <EditText
         android:id="@+id/sign_in_email_password"
-        android:hint="@string/sign_in_password"
+        android:hint="@string/form_password"
         android:inputType="textPassword"
         android:layout_width="0dp"
         android:layout_height="60dp"
@@ -43,7 +43,7 @@
 
     <Button
         android:id="@+id/sign_in_with_email_continue_button"
-        android:text="@string/continue_text"
+        android:text="@string/action_continue"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
