--- a/app/src/main/res/layout/fragment_order_item.xml
+++ b/app/src/main/res/layout/fragment_order_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:text="Order"
+        android:text="@string/order"
         android:lines="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/open"
