--- a/app/src/main/res/layout/activity_chef_sign_up_form.xml
+++ b/app/src/main/res/layout/activity_chef_sign_up_form.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_first_name"
+        android:hint="@string/form_first_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_last_name"
+        android:hint="@string/form_last_name"
         app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_first_name"
         app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_first_name"
         app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_first_name" />
@@ -47,7 +47,7 @@
             android:layout_height="46dp"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="@string/user_sign_up_form_email"
+            android:hint="@string/form_email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_last_name"
             app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_last_name"
@@ -59,7 +59,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_password"
+        android:hint="@string/form_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_email"
         app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_email"
@@ -71,7 +71,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_description"
+        android:hint="@string/form_description"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_password"
         app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_password"
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_address"
+        android:hint="@string/form_address"
         android:inputType="text"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_description"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_marginTop="30dp"
-        android:text="Void Check"
+        android:text="@string/form_void_check"
         style="@style/CallToAction"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_address"
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/user_sign_up_form_submit"
+        android:text="@string/action_submit"
         style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
