--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
-        android:text="@string/profile_title"
+        android:text="@string/account_title"
         android:textSize="45sp"
         android:textColor="#D96545"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,11 +30,11 @@
         app:layout_constraintTop_toBottomOf="@id/profile_title"/>
 
     <TextView
-        android:id="@+id/profile_first_name"
+        android:id="@+id/profile_first_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="First name"
+        android:text="@string/form_first_name"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
@@ -42,44 +42,110 @@
         app:layout_constraintTop_toBottomOf="@id/profile_image" />
 
     <TextView
-        android:id="@+id/profile_last_name"
+        android:id="@+id/profile_first_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="John"
+        android:textSize="20sp"
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_first_name_label"
+        app:layout_constraintStart_toEndOf="@id/profile_first_name_label"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_last_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Last name"
+        android:text="@string/form_last_name"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/profile_first_name"
-        app:layout_constraintTop_toBottomOf="@id/profile_first_name" />
+        app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_first_name_label"/>
+
+    <TextView
+        android:id="@+id/profile_last_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Doe"
+        android:textSize="20sp"
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_last_name_label"
+        app:layout_constraintStart_toEndOf="@id/profile_last_name_label"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_email_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/form_email"
+        android:textSize="20sp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_last_name_label" />
+
 
     <TextView
         android:id="@+id/profile_email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="email adress"
+        android:text="jdoe@mealer.com"
         android:textSize="20sp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@id/profile_first_name"
-        app:layout_constraintTop_toBottomOf="@id/profile_last_name" />
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_email_label"
+        app:layout_constraintStart_toEndOf="@id/profile_email_label"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/profile_address"
+        android:id="@+id/profile_address_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Adress"
         android:textSize="20sp"
         android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@id/profile_first_name"
-        app:layout_constraintTop_toBottomOf="@id/profile_email"/>
+        app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_email_label"/>
 
     <TextView
-        android:id="@+id/profile_description"
+        android:id="@+id/profile_address"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="10 joe st"
+        android:textSize="20sp"
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_address_label"
+        app:layout_constraintStart_toEndOf="@id/profile_address_label"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_description_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
         android:textSize="20sp"
         android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@id/profile_first_name"
-        app:layout_constraintTop_toBottomOf="@id/profile_address"/>
+        app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_address_label"/>
+
+    <TextView
+        android:id="@+id/profile_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Hi. My name is Joe"
+        android:textSize="20sp"
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_description_label"
+        app:layout_constraintStart_toEndOf="@id/profile_description_label"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/profile_stars"
@@ -89,7 +155,7 @@
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_description"
+        app:layout_constraintTop_toBottomOf="@id/profile_description_label"
         app:layout_constraintBottom_toTopOf="@id/profile_close">
         <ImageView
             android:id="@+id/profile_1_star"
@@ -99,7 +165,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_1_star_rating" />
+            android:contentDescription="@string/star_rating_1" />
         <ImageView
             android:id="@+id/profile_2_star"
             android:layout_width="64dp"
@@ -108,7 +174,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_2_star_rating" />
+            android:contentDescription="@string/star_rating_2" />
         <ImageView
             android:id="@+id/profile_3_star"
             android:layout_width="64dp"
@@ -117,7 +183,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_3_star_rating" />
+            android:contentDescription="@string/star_rating_3" />
         <ImageView
             android:id="@+id/profile_4_star"
             android:layout_width="64dp"
@@ -126,7 +192,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_4_star_rating" />
+            android:contentDescription="@string/star_rating_4" />
         <ImageView
             android:id="@+id/profile_5_star"
             android:layout_width="64dp"
@@ -135,14 +201,14 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_5_star_rating" />
+            android:contentDescription="@string/star_rating_5" />
     </LinearLayout>
 
     <Button
         android:id="@+id/profile_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/close"
+        android:text="@string/action_close"
         app:layout_constraintTop_toBottomOf="@id/profile_stars"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
