--- a/app/src/main/res/layout/activity_recipe_form.xml
+++ b/app/src/main/res/layout/activity_recipe_form.xml
@@ -26,7 +26,7 @@
         android:ems="10"
         android:imeOptions="actionNext"
         android:singleLine="true"
-        android:hint="@string/recipe_form_name"
+        android:hint="@string/form_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:ems="10"
-        android:hint="@string/recipe_form_course"
+        android:hint="@string/form_course"
         app:layout_constraintEnd_toEndOf="@id/recipe_form_name"
         app:layout_constraintStart_toStartOf="@id/recipe_form_name"
         app:layout_constraintTop_toBottomOf="@id/recipe_form_name" />
@@ -60,7 +60,7 @@
         android:ems="10"
         android:imeOptions="actionSend"
         android:singleLine="true"
-        android:hint="@string/recipe_form_categories"
+        android:hint="@string/form_categories"
         app:layout_constraintEnd_toEndOf="@id/recipe_form_course"
         app:layout_constraintStart_toStartOf="@id/recipe_form_course"
         app:layout_constraintTop_toBottomOf="@id/recipe_form_category_chips" />
@@ -87,7 +87,7 @@
         android:layout_marginTop="5dp"
         android:ems="10"
         android:imeOptions="actionSend"
-        android:hint="@string/recipe_form_ingredients"
+        android:hint="@string/form_ingredients"
         android:inputType="textAutoComplete"
         android:singleLine="true"
         app:layout_constraintEnd_toEndOf="@id/recipe_form_categories"
@@ -109,7 +109,7 @@
         android:layout_marginTop="5dp"
         android:ems="10"
         android:imeOptions="actionSend"
-        android:hint="@string/recipe_form_allergens"
+        android:hint="@string/form_allergens"
         android:inputType="text"
         android:singleLine="true"
         app:layout_constraintEnd_toEndOf="@id/recipe_form_ingredients"
@@ -123,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/recipe_form_price"
+        android:hint="@string/form_price"
         android:inputType="text"
         android:imeOptions="actionNext"
         android:singleLine="true"
@@ -137,7 +137,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/recipe_form_description"
+        android:hint="@string/form_description"
         android:inputType="text"
         android:imeOptions="actionNext"
         android:singleLine="true"        app:layout_constraintEnd_toEndOf="@id/recipe_form_price"
@@ -149,7 +149,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/recipe_form_submit"
+        android:text="@string/action_submit"
         style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
