--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/sign_in_header" />
+        android:text="@string/sign_in_title" />
 
     <EditText
         android:id="@+id/sign_in_email_field"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/sign_in_header"
         android:inputType="textEmailAddress"
         android:imeOptions="actionGo"
-        android:hint="@string/sign_in_email" />
+        android:hint="@string/form_email" />
 
     <Button
         android:id="@+id/sign_in_continue_button"
@@ -36,7 +36,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:text="@string/continue_text"
+        android:text="@string/action_continue"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
@@ -58,7 +58,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:autoSizeTextType="uniform"
-        android:text="@string/or"
+        android:text="@string/logic_or"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/placeholderButton"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
