--- a/app/src/main/res/layout/activity_user_sign_up_form.xml
+++ b/app/src/main/res/layout/activity_user_sign_up_form.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_first_name"
+        android:hint="@string/form_first_name"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_last_name"
+        android:hint="@string/form_last_name"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_first_name"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_first_name"
         app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_first_name" />
@@ -45,10 +47,10 @@
     <EditText
         android:id="@+id/user_sign_up_form_email"
         android:layout_width="wrap_content"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_email"
+        android:hint="@string/form_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_last_name"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_last_name"
@@ -57,10 +59,10 @@
     <EditText
         android:id="@+id/user_sign_up_form_password"
         android:layout_width="wrap_content"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_password"
+        android:hint="@string/form_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_email"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_email"
@@ -73,7 +75,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_description"
+        android:hint="@string/form_description"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_password"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_password"
@@ -86,8 +88,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_credit_card"
+        android:hint="@string/form_credit_card"
         android:inputType="phone"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_description"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_description"
         app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_description" />
@@ -98,9 +101,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_address"
+        android:hint="@string/form_address"
         android:inputType="text"
         android:maxLines="1"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@id/user_sign_up_form_credit_card"
         app:layout_constraintStart_toStartOf="@id/user_sign_up_form_credit_card"
         app:layout_constraintTop_toBottomOf="@id/user_sign_up_form_credit_card" />
@@ -111,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="30dp"
-        android:text="@string/user_sign_up_form_conditions"
+        android:text="@string/form_conditions"
         style="@style/CallToActionDarkText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/user_sign_up_form_submit_button" />
@@ -121,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/user_sign_up_form_submit"
+        android:text="@string/action_submit"
         style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
