--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -28,7 +28,7 @@
             android:id="@+id/menu_chips_offered"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Offered"/>
+            android:text="@string/filter_offered"/>
     </com.google.android.material.chip.ChipGroup>
 
     <androidx.recyclerview.widget.RecyclerView
