--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -28,7 +28,7 @@
             android:id="@+id/order_list_chips_offered"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/show_resolved"/>
+            android:text="@string/action_show_resolved"/>
     </com.google.android.material.chip.ChipGroup>
 
     <androidx.recyclerview.widget.RecyclerView
