--- a/app/src/main/res/layout/fragment_recommendation_item.xml
+++ b/app/src/main/res/layout/fragment_recommendation_item.xml
@@ -42,7 +42,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_1_star_rating" />
+            android:contentDescription="@string/star_rating_1" />
         <ImageView
             android:id="@+id/recommendation_2_star"
             android:layout_width="64dp"
@@ -51,7 +51,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_2_star_rating" />
+            android:contentDescription="@string/star_rating_2" />
         <ImageView
             android:id="@+id/recommendation_3_star"
             android:layout_width="64dp"
@@ -60,7 +60,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_3_star_rating" />
+            android:contentDescription="@string/star_rating_3" />
         <ImageView
             android:id="@+id/recommendation_4_star"
             android:layout_width="64dp"
@@ -69,7 +69,7 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_4_star_rating" />
+            android:contentDescription="@string/star_rating_4" />
         <ImageView
             android:id="@+id/recommendation_5_star"
             android:layout_width="64dp"
@@ -78,6 +78,6 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             app:tint="@color/primary"
-            android:contentDescription="@string/order_5_star_rating" />
+            android:contentDescription="@string/star_rating_5" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
