--- a/app/src/main/res/layout/order_page.xml
+++ b/app/src/main/res/layout/order_page.xml
@@ -117,13 +117,14 @@
                 android:id="@+id/order_status_select_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/set_status"
+                android:text="@string/action_set_status"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
             <Spinner
                 android:id="@+id/order_status_select"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/order_status_select_label"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -156,7 +157,7 @@
                 android:scaleType="fitCenter"
                 android:background="#00000000"
                 app:tint="@color/primary"
-                android:contentDescription="@string/order_1_star_rating" />
+                android:contentDescription="@string/star_rating_1" />
             <ImageButton
                 android:id="@+id/order_status_2_star"
                 android:layout_width="64dp"
@@ -165,7 +166,7 @@
                 android:scaleType="fitCenter"
                 android:background="#00000000"
                 app:tint="@color/primary"
-                android:contentDescription="@string/order_2_star_rating" />
+                android:contentDescription="@string/star_rating_2" />
             <ImageButton
                 android:id="@+id/order_status_3_star"
                 android:layout_width="64dp"
@@ -174,7 +175,7 @@
                 android:scaleType="fitCenter"
                 android:background="#00000000"
                 app:tint="@color/primary"
-                android:contentDescription="@string/order_3_star_rating" />
+                android:contentDescription="@string/star_rating_3" />
             <ImageButton
                 android:id="@+id/order_status_4_star"
                 android:layout_width="64dp"
@@ -183,7 +184,7 @@
                 android:scaleType="fitCenter"
                 android:background="#00000000"
                 app:tint="@color/primary"
-                android:contentDescription="@string/order_4_star_rating" />
+                android:contentDescription="@string/star_rating_4" />
             <ImageButton
                 android:id="@+id/order_status_5_star"
                 android:layout_width="64dp"
@@ -192,7 +193,7 @@
                 android:scaleType="fitCenter"
                 android:background="#00000000"
                 app:tint="@color/primary"
-                android:contentDescription="@string/order_5_star_rating" />
+                android:contentDescription="@string/star_rating_5" />
         </LinearLayout>
 
         <Button
@@ -206,7 +207,7 @@
             android:id="@+id/order_status_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/action_save"
             android:visibility="gone"
             app:layout_constraintHorizontal_bias="0.5" />
 
@@ -216,7 +217,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_bias="0.5"
-            android:text="@string/close"
+            android:text="@string/action_close"
             />
 
 
