--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -8,25 +8,29 @@
 
     <ImageButton
         android:id="@+id/choose_user_type_chef_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         style="@style/UserSelectImage"
-        android:src="@drawable/chef"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/bnt_circle"
         android:clickable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/choose_user_type_user_button"
-        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true"
+        android:src="@drawable/chef"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:focusable="true" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.693" />
 
     <ImageButton
         android:id="@+id/choose_user_type_user_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         style="@style/UserSelectImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/bnt_circle"
         android:src="@drawable/user"
-        app:layout_constraintStart_toEndOf="@id/choose_user_type_chef_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintVertical_bias="0.16" />
 </androidx.constraintlayout.widget.ConstraintLayout>
