--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="550dp"
         android:layout_marginBottom="15dp"
         android:autoSizeTextType="uniform"
-        android:text="Great food awaits...or potentially cursed..."
+        android:text="@string/welcome_text"
         android:textAlignment="center"
         android:textColor="#D96545"
         android:textStyle="bold"
