--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".UI.Activities.ChooseUserTypeActivity">
 
+
+
     <ImageButton
         android:id="@+id/choose_user_type_chef_button"
         style="@style/UserSelectImage"
@@ -14,7 +16,7 @@
         android:background="@drawable/bnt_circle"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/chef"
+        android:src="@drawable/chef_hat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,4 +35,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16" />
+
+    <TextView
+        android:id="@+id/chefImage"
+        android:layout_width="58dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="15dp"
+        android:autoSizeTextType="uniform"
+        android:text="Chef"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textStyle="italic"
+
+        app:layout_constraintBottom_toBottomOf="@+id/choose_user_type_chef_button"
+        app:layout_constraintEnd_toEndOf="@+id/choose_user_type_chef_button"
+        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintStart_toStartOf="@+id/choose_user_type_chef_button"
+        app:layout_constraintTop_toTopOf="@+id/choose_user_type_chef_button"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
