--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/bnt_circle"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/chef_hat"
+        android:src="@drawable/chef_hhat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,5 +52,5 @@
         app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="@+id/choose_user_type_chef_button"
         app:layout_constraintTop_toTopOf="@+id/choose_user_type_chef_button"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.891" />
 </androidx.constraintlayout.widget.ConstraintLayout>
