--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -115,7 +115,7 @@
         android:id="@+id/recipe_offered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Is offered"
+        android:text="@string/form_is_offered"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/recipe_price_label"
         app:layout_constraintStart_toStartOf="@id/recipe_price_label"/>
