--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/bnt_circle"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/chef_hhat"
+        android:src="@drawable/chef_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +38,8 @@
 
     <TextView
         android:id="@+id/chefImage"
-        android:layout_width="106dp"
-        android:layout_height="41dp"
+        android:layout_width="135dp"
+        android:layout_height="71dp"
         android:layout_marginStart="15dp"
         android:autoSizeTextType="uniform"
         android:text="@string/chef_choose"
@@ -49,8 +49,8 @@
 
         app:layout_constraintBottom_toBottomOf="@+id/choose_user_type_chef_button"
         app:layout_constraintEnd_toEndOf="@+id/choose_user_type_chef_button"
-        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="@+id/choose_user_type_chef_button"
         app:layout_constraintTop_toTopOf="@+id/choose_user_type_chef_button"
-        app:layout_constraintVertical_bias="0.891" />
+        app:layout_constraintVertical_bias="0.906" />
 </androidx.constraintlayout.widget.ConstraintLayout>
