--- a/app/src/main/res/layout/activity_choose_user_type.xml
+++ b/app/src/main/res/layout/activity_choose_user_type.xml
@@ -29,17 +29,18 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:background="@drawable/bnt_circle"
-        android:src="@drawable/user"
+        android:src="@drawable/user_nomnom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16" />
+        app:layout_constraintVertical_bias="0.161" />
 
     <TextView
         android:id="@+id/chefImage"
         android:layout_width="135dp"
-        android:layout_height="71dp"
+        android:layout_height="50dp"
         android:layout_marginStart="15dp"
         android:autoSizeTextType="uniform"
         android:text="@string/chef_choose"
@@ -52,5 +53,24 @@
         app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="@+id/choose_user_type_chef_button"
         app:layout_constraintTop_toTopOf="@+id/choose_user_type_chef_button"
-        app:layout_constraintVertical_bias="0.906" />
+        app:layout_constraintVertical_bias="0.86" />
+
+    <TextView
+        android:id="@+id/userImage"
+        android:layout_width="135dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/user_choose"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@+id/choose_user_type_user_button"
+        app:layout_constraintEnd_toEndOf="@+id/choose_user_type_user_button"
+        app:layout_constraintHorizontal_bias="0.34"
+        app:layout_constraintStart_toStartOf="@+id/choose_user_type_user_button"
+        app:layout_constraintTop_toTopOf="@+id/choose_user_type_user_button"
+        app:layout_constraintVertical_bias="0.9" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
