--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -105,7 +105,7 @@
         android:id="@+id/profile_address_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adress"
+        android:text="@string/form_address"
         android:textSize="20sp"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
@@ -128,7 +128,7 @@
         android:id="@+id/profile_description_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="@string/form_description"
         android:textSize="20sp"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
@@ -147,6 +147,29 @@
         app:layout_constraintStart_toEndOf="@id/profile_description_label"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/profile_total_sales_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/form_total_sales"
+        android:textSize="20sp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/profile_first_name_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_description_label"/>
+
+    <TextView
+        android:id="@+id/profile_total_sales"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="50 000"
+        android:textSize="20sp"
+        android:lines="1"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/profile_total_sales_label"
+        app:layout_constraintStart_toEndOf="@id/profile_total_sales_label"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
         android:id="@+id/profile_stars"
         android:layout_width="match_parent"
@@ -155,7 +178,7 @@
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_description_label"
+        app:layout_constraintTop_toBottomOf="@id/profile_total_sales_label"
         app:layout_constraintBottom_toTopOf="@id/profile_close">
         <ImageView
             android:id="@+id/profile_1_star"
